<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/no_of_hours"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/no_of_hours_input"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hourly_rate"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hourly_rate_input"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="calculator"
        android:text="@string/calculate" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <Space
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pay"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/payment_out"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/tax"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tax_out"
            android:layout_width="605dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>